# daw-ai

./: .coveragerc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  charter.md  codecov.yml  design.md  justfile  manage.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
codex/: STUDIO.md  edit-plan.schema.json
daw_ai/: asgi.py  urls.py  wsgi.py
daw_ai/hello/: apps.py
daw_ai/hello/test/: test_views.py
daw_ai/settings/: common.py  dev.py  prod.py
deploy/: daw-ai.service
gemini/: STUDIO.md  edit-plan.schema.json
qa/: browser.test.js
src/: audio_analysis.rs  audio_stream.rs  codex.rs  codex_mcp.rs  concurrency.rs  gemini.rs  gemini_tools.rs  json.rs  lib.rs  main.rs  model.rs  project_file.rs  project_history.rs  prompt.rs  server.rs  storage.rs  surge.rs  surge_presets.rs
tests/: vendor_boundary.rs
web/: app.css  app.js  index.html
