[package]
name = "daw-ai"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A local, prompt-driven music studio"
license = "GPL-3.0-or-later"

[workspace]
exclude = ["vendor/surge-bridge", "vendor/surge-sys"]

[dependencies]
serde_json = "1.0"
surge-rs = { git = "https://github.com/surge-synthesizer/surge-rs.git", rev = "7bfeafc76d1c57860a177e9e076bed7ec764009a" }

[patch."https://github.com/surge-synthesizer/surge-rs.git"]
# The official alpha binding needs ABI and lifetime fixes documented in each
# vendored crate's PATCHES.md.
surge-bridge = { path = "vendor/surge-bridge" }
surge-sys = { path = "vendor/surge-sys" }

[profile.release]
strip = true
lto = true
codegen-units = 1
